working on .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=BemEstar
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=bem_estar
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=eOpel6Frs0
+DB_USERNAME=eOpel6Frs0
+DB_PASSWORD=qbYvjLJ678
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
