working on .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=BemEstar
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:K73bgdfqhy+wff5cmhU8EkPCMW4U9TwDw6Niy+XWKh8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
